--- a/Compass Challenger/index.html
+++ b/Compass Challenger/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Compass Challenger/src/assets/ps_orkut.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tela de Cadastro</title>
+    <title>Orkut</title>
   </head>
   <body>
     <div id="root"></div>
